--- a/app/views/question.erb
+++ b/app/views/question.erb
@@ -1,7 +1,11 @@
 <div class="container">
-    <h1>Results</h1>
+    <h1>Poll Results</h1>
     <h2><%=@question.body %></h2>
     <div class ="results">
         <p>show poll results here</p>
     </div>
+
+    <form method = "POST" action = "/questions/<%=@question.id%>">
+        <input type = "submit" value = "Delete Question" class = "big_btn">
+    </form>
 </div>
