--- a/app/views/result.erb
+++ b/app/views/result.erb
@@ -1,16 +1,15 @@
 <div class="container">
-    <h1>Poll Results</h1>
-    <h2><%=@question.body %></h2>
+    <h2 id="<%=@question.id%>">Poll Results</h2>
     <div class ="results">
-        <ul>
-        <% @answers.each do |answer| %>
-            <li><%= answer.answer %></li>
-        <% end %>
-        </ul>
+        <div id="chartContainer">
+        </div>
     </div>
 
-    <form method = "POST" action = "/questions/<%=@question.id%>">
+<div class = "buttons">
+    <form class ="question_actions" method = "POST" action = "/questions/<%=@question.id%>">
         <input name="_method" type="hidden" value="delete" />
         <input type = "submit" value = "Delete Question" class = "big_btn">
     </form>
 </div>
+</div>
+<script src="/js/application.js"></script>
