--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,6 +4,12 @@
   padding: 2%;
 }
 
+h2{
+  text-align: center;
+  margin-bottom: 3%;
+  font-size: 3em;
+}
+
 th {
   text-align: left;
 }
@@ -50,7 +56,18 @@ a:visited {
 .big_btn {
   padding: 2%;
   font-weight: bold;
-  font-size: 1.2em;
-  background-color: white;
+  font-size: 1.1em;
+  background-color: lightblue;
   margin: 2%;
+}
+
+div#chartContainer {
+  height: 400px;
+  width: 60%;
+  margin: auto;
+}
+
+.question_actions {
+  width: 50%;
+  margin: auto;
 }
