troubleshoot chrome aw snap error rendering chart

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,8 +14,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="/js/canvasjs.min.js"></script>
-
-
+  <script src="/js/application.js"></script>
 
   <title>Afton's SMS Polling App</title>
 </head>
